<resources>
    <string name="app_name">Inzynierka_app</string>
    <string name="company_desc">Our goal is high-quality furniture fittings that make living more comfortable. We produce lift systems, hinges and drawers as well as pocket solutions for furniture, and our offer is complemented by services and assembly aids.</string>
    <string name="auto_mode">AUTO MODE</string>
    <string name="manual_mode">MANUAL MODE</string>
    <string name="block_mode">BLOCK MODE</string>
    <string name="parameters">PARAMETERS</string>
    <string name="commands">COMMANDS</string>
    <string name="set_start">Set start</string>
    <string name="set_cycles">Set cycles</string>
    <string name="set_time">Set time</string>
    <string name="cycles">Cycles</string>
    <string name="set_duration">Set duration</string>
    <string name="time">Time</string>
    <string name="none_hint">None</string>
    <string name="_0_hint" translatable="false">0</string>
    <string name="operating_mode">OPERATING MODE</string>
    <string name="stop" translatable="false">STOP</string>
    <string name="run" translatable="false">RUN</string>
    <string name="start_up" translatable="false">START UP</string>
    <string name="start_now">Start now</string>
    <string name="start" translatable="false">Start</string>
    <string name="pause">Pause</string>
    <string name="stop_btn" translatable="false">Stop</string>
    <string name="login" translatable="false">Login</string>
    <string name="password">Password</string>
    <string name="step">Step</string>
    <string name="led" translatable="false">led</string>
    <string name="change_mode">Change mode</string>
    <string name="map">map</string>
    <string name="social_media">SOCIAL MEDIA</string>
    <string name="instagram_icon" translatable="false">Instagram icon</string>
    <string name="fb_icon" translatable="false">fb_icon</string>
    <string name="pint_icon" translatable="false">pint_icon</string>
    <string name="yt_icon" translatable="false">yt_icon</string>
    <string name="auto" translatable="false">AUTO</string>
    <string name="manual">MANUAL</string>
    <string name="block">BLOCK</string>
    <string-array name="start_point">
        <item>Default</item>
        <item>Step 1</item>
        <item>Step 2</item>
        <item>Step 3</item>
        <item>Step 4</item>
        <item>Step 5</item>
        <item>Step 6</item>
        <item>Step 7</item>
        <item>Step 8</item>
    </string-array>
    <string-array name="change_mode">
        <item>Default</item>
        <item>RUN</item>
        <item>STOP</item>
    </string-array>
    <string name="vtk_top_sensor_error_name">VTK TOP SENSOR</string>
    <string name="vtk_top_sensor_error_desc">Incorrect signal from the vertical top sensor.</string>
    <string name="vtk_down_sensor_error_name">VTK DOWN SENSOR</string>
    <string name="vtk_down_sensor_error_desc">Incorrect signal from the vertical down sensor.</string>
    <string name="hor_right_sensor_error_name">HOR RIGHT SENSOR</string>
    <string name="hor_right_sensor_error_desc">Incorrect signal from the horizontal right sensor.</string>
    <string name="hor_left_sensor_error_name">HOR LEFT SENSOR</string>
    <string name="hor_left_sensor_error_desc">Incorrect signal from the horizontal left sensor.</string>
    <string name="gripper_sensor_error_name">GRIPPER SENSOR</string>
    <string name="gripper_sensor_error_desc">Incorrect signal from the gripper sensor.</string>
    <string name="put_error_name">PUT DOWN</string>
    <string name="put_error_desc">Item can not be put down.</string>
    <string name="not_halt_error_name">SAFETY SWITCH </string>
    <string name="not_hat_error_desc">Emergency stop switch on.</string>

    <string name="incorrect_login_or_password_error">Incorrect login or password.</string>
    <string name="network_connection_error_name">Network failure</string>
    <string name="network_connection_error_desc">Please Check Your Internet Connection Or Try Again Later.</string>
    <string name="error_icon" translatable="false">Error Icon</string>
    <string name="delete_history">Are you sure you want to delete history?</string>
    <string name="delete_history_desc">You can\'t undo this action.</string>
    <string name="error_desc_icon" translatable="false">Error desc icon</string>
    <string name="hold" translatable="false">HOLD</string>
    <string name="duration">Duration</string>
    <string name="unit_s" translatable="false">[s]</string>
    <string name="cycle_time">Cycle time</string>
    <string name="avr_cycle_time">Avr cycle time</string>
    <string name="step_1"> Step 1</string>
    <string name="step_2"> Step 2</string>
    <string name="step_3"> Step 3</string>
    <string name="step_4"> Step 4</string>
    <string name="step_5"> Step 5</string>
    <string name="step_6"> Step 6</string>
    <string name="step_7"> Step 7</string>
    <string name="step_8"> Step 8</string>
    <string name="default_single" translatable="false">Default</string>
    <string name="go_to">Go to</string>
    <string name="login_icon" translatable="false">Login icon</string>
    <string name="lock_icon" translatable="false">Lock icon</string>
    <string name="blum_desc">High quality for our customers around the world. We have eight production facility in Austria and facility in the USA, Brazil and Poland. </string>
    <string name="selected_sequence">Selected\nsequence</string>
    <string name="commandAndParams">PARAMETERS &amp; COMMANDS</string>
    <string name="units" translatable="false"> [ms]</string>
    <string name="delete"> Delete</string>
    <string name="gripper_control" translatable="false"> Gripper Control</string>
    <string name="about_company">About company</string>
</resources>