<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="gripperViewModel"
            type="com.example.inzynierka_app.viewmodel.GripperViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment.ManualFragment">

        <LinearLayout
            android:id="@+id/llAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_1"
                    android:onClickListener='@{() -> gripperViewModel.chooseStep("Step 1")}'/>

                <Button
                    android:id="@+id/btntwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_3"
                    android:onClickListener='@{() -> gripperViewModel.chooseStep("Step 3")}'/>

                <Button
                    android:id="@+id/btnthree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_5"
                    android:onClickListener='@{() -> gripperViewModel.chooseStep("Step 5")}'/>

                <Button
                    android:id="@+id/btnFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_7"
                    android:onClickListener='@{() -> gripperViewModel.chooseStep("Step 7")}'/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_2"
                android:onClickListener='@{() -> gripperViewModel.chooseStep("Step 2")}'/>

            <Button
                android:id="@+id/btnSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_4"
                android:onClickListener='@{() -> gripperViewModel.chooseStep("Step 4")}'/>

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_6"
                android:onClickListener='@{() -> gripperViewModel.chooseStep("Step 6")}'/>

            <Button
                android:id="@+id/btnEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_8"
                android:onClickListener='@{() -> gripperViewModel.chooseStep("Step 8")}'/>

        </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/llAuto"
            app:layout_constraintTop_toTopOf="@+id/llAuto"
            app:layout_constraintStart_toEndOf="@+id/llAuto"
            app:layout_constraintEnd_toEndOf="parent">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCyclesd"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selected_sequence"
                        android:layout_gravity="center"
                        android:textStyle="bold"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/mRecycler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/llAuto"
                        app:layout_constraintStart_toEndOf="@+id/llAuto"
                        app:layout_constraintEnd_toEndOf="parent">
                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/facilitiesCard2"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/llAuto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/commandAndParams" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/facilitiesCard2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/setNr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center" >

                <TextView
                    android:id="@+id/tvCycles"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_cycles" />

                <EditText
                    android:id="@+id/etCycles"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/params_margin_start"
                    android:hint="@string/none_hint"
                    android:text="@={gripperViewModel.setBlock}" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llComands"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center" >

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:layout_marginEnd="20dp"
                    android:onClickListener="@{() -> gripperViewModel.startBlock()}" />

                <Button
                    android:id="@+id/btnStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_btn"
                    android:onClickListener="@{() -> gripperViewModel.stopBlock()}" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>