<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="gripperViewModel"
            type="com.example.inzynierka_app.ui.viewmodel.GripperViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragment.ModeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clOperatingMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/facilitiesCard"
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvOpMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/operating_mode"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/llMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/param_margin_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/facilitiesCard">

                <LinearLayout
                    android:id="@+id/llModeLed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/params_margin_start"
                        android:layout_marginBottom="@dimen/param_margin_bottom"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivLedRun"
                            android:layout_width="@dimen/led_dimen"
                            android:layout_height="@dimen/led_dimen"
                            android:layout_gravity="center"
                            android:src='@{gripperViewModel.cpuMode.equals("run") ? @drawable/led_green : @drawable/led_gray }'
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@drawable/led_gray" />

                        <TextView
                            android:id="@+id/tvRun"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/params_margin_start"
                            android:text="@string/run"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/ivLedRun"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/params_margin_start"
                        android:layout_marginBottom="@dimen/param_margin_bottom"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivLedStartUp"
                            android:layout_width="@dimen/led_dimen"
                            android:layout_height="@dimen/led_dimen"
                            android:layout_gravity="center"
                            android:src='@{gripperViewModel.cpuMode.equals("startup") ? @drawable/led_yellow : @drawable/led_gray }'
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@drawable/led_gray" />

                        <TextView
                            android:id="@+id/tvStartUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/params_margin_start"
                            android:text="@string/start_up"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/ivLedStartUp"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/params_margin_start"
                        android:layout_marginBottom="@dimen/param_margin_bottom"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivLedHold"
                            android:layout_width="@dimen/led_dimen"
                            android:layout_height="@dimen/led_dimen"
                            android:layout_gravity="center"
                            android:src='@{gripperViewModel.cpuMode.equals("hold") ? @drawable/led_yellow : @drawable/led_gray }'
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@drawable/led_gray" />

                        <TextView
                            android:id="@+id/tvHold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/params_margin_start"
                            android:text="@string/hold"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/ivLedHold"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/params_margin_start"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivLedStop"
                            android:layout_width="@dimen/led_dimen"
                            android:layout_height="@dimen/led_dimen"
                            android:layout_gravity="center"
                            android:src='@{gripperViewModel.cpuMode.equals("stop") ? @drawable/led_red : @drawable/led_gray }'
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@drawable/led_gray" />

                        <TextView
                            android:id="@+id/tvStop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/params_margin_start"
                            android:text="@string/stop"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/ivLedStop"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/swActive"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:onCheckedChanged="@{(switch, checked) -> gripperViewModel.onControlTbCheckedChanged(checked)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/llModeLed"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/params_margin_start"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llMode">

                <TextView
                    android:id="@+id/tvChangeMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_mode"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilChangeMode"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/params_margin_start"
                    app:layout_constraintBottom_toBottomOf="@+id/tvChangeMode"
                    app:layout_constraintStart_toEndOf="@+id/tvChangeMode"
                    app:layout_constraintTop_toTopOf="@+id/tvChangeMode">

                    <AutoCompleteTextView
                        android:id="@+id/actvChangeMode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/default_single"
                        android:inputType="none"
                        android:padding="0dp"
                        app:simpleItems="@array/change_mode" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>